--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,4 @@
+# v1.61.0
 run:
   timeout: 5m
   tests: true
@@ -8,109 +9,72 @@ run:
     - .git
     - .github
     - docs
+    - test/template
 
 linters:
-  enable-all: true
-  disable:
-    - exhaustruct
-    - depguard
-    - musttag
-    - interfacebloat
-    - ireturn
-    - varnamelen
-    - gomnd
-    - mnd
-    - wrapcheck
-    - testpackage
-    - paralleltest
-    - tparallel
-    - thelper
-    - forbidigo
-    - gochecknoglobals
-    - execinquery
-    - tagalign
-    - err113
-    - perfsprint
-    - copyloopvar
-    - exportloopref
-    - intrange
-    - protogetter
+  enable:
+    - errcheck
+    - gosimple
+    - govet
+    - ineffassign
+    - staticcheck
+    - unused
+    - gofmt
+    - goimports
+    - revive
+    - misspell
+    - unconvert
+    - unparam
+    - nakedret
+    - prealloc
+    - gocritic
+    - gochecknoinits
+    - whitespace
 
 linters-settings:
+  errcheck:
+    check-type-assertions: true
+    check-blank: true
   govet:
-    enable-all: true
-    settings:
-      shadow:
-        strict: true
-  
-  gocyclo:
-    min-complexity: 15
-  
-  goconst:
-    min-len: 3
-    min-occurrences: 3
-  
-  misspell:
-    locale: US
-  
-  lll:
-    line-length: 120
-  
+    check-shadowing: true
+  gofmt:
+    simplify: true
   goimports:
-    local-prefixes: github.com/jmca/selektor
-  
+    local-prefixes: github.com/jmcarbo/gotemplate
   gocritic:
     enabled-tags:
       - diagnostic
-      - performance
       - style
-      - experimental
+      - performance
     disabled-checks:
-      - dupImport
-  
-  funlen:
-    lines: 60
-    statements: 40
-  
-  godox:
-    keywords:
-      - TODO
-      - FIXME
-      - OPTIMIZE
-      - HACK
-  
-  wsl:
-    allow-cuddle-declarations: true
-  
-  nolintlint:
-    allow-unused: false
-    allow-no-explanation: []
-    require-explanation: true
-    require-specific: true
+      - commentedOutCode
+      - whyNoLint
+  revive:
+    severity: warning
+    rules:
+      - name: blank-imports
+      - name: context-keys-type
+      - name: time-naming
+      - name: var-declaration
+      - name: unexported-return
+      - name: errorf
+      - name: context-as-argument
+      - name: dot-imports
+      - name: error-return
+      - name: error-strings
+      - name: error-naming
 
 issues:
   exclude-rules:
     - path: _test\.go
       linters:
-        - dupl
-        - gosec
-        - goconst
-        - funlen
-        - gocognit
-        - gocyclo
         - errcheck
-        - goerr113
-    
-    - path: test/
-      linters:
-        - goerr113
-        - gosec
-    
+        - unparam
+        - prealloc
     - path: cmd/
       linters:
-        - gochecknoglobals
-        - goerr113
-    
-    - linters:
-        - stylecheck
-      text: "ST1000:"
+        - gochecknoinits
+    - path: test/
+      linters:
+        - errcheck
+        - unparam
