feat: add template configuration files and preserve directory structure
- Add .air.toml.example for hot reload configuration
- Add .goreleaser.yml.example for release automation
- Add .gitkeep files to preserve empty directories
- Update .gitignore with helpful comments
- Update template sync to include example files
- Update documentation with configuration setup

--- a/.gitignore
+++ b/.gitignore
@@ -49,9 +49,11 @@ temp/
 *.tmp
 
 # Air - Live reload for Go apps
+# Use .air.toml.example as template
 .air.toml
 
 # GoReleaser
+# Use .goreleaser.yml.example as template
 .goreleaser.yml
 dist/
 
