fix: update module name and references throughout codebase
- Change module name from github.com/jmca/selektor to gotemplaterepo
- Update all import paths to use the new module name
- Replace all selektor references with gotemplate in configs
- Update docker-compose.yml service names and credentials
- Update Makefile binary and image names
- Fix GitHub Actions test failures

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/selektor:latest
-            ${{ secrets.DOCKER_USERNAME }}/selektor:${{ github.ref_name }}
+            ${{ secrets.DOCKER_USERNAME }}/gotemplate:latest
+            ${{ secrets.DOCKER_USERNAME }}/gotemplate:${{ github.ref_name }}
             ghcr.io/${{ github.repository }}:latest
             ghcr.io/${{ github.repository }}:${{ github.ref_name }}
