--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Application
 APP_ENV=development
 APP_PORT=8080
-APP_NAME=selektor
+APP_NAME=gotemplate
 
 # Database
-DATABASE_URL=postgres://selektor:selektor@localhost:5432/selektor?sslmode=disable
+DATABASE_URL=postgres://gotemplate:gotemplate@localhost:5432/gotemplate?sslmode=disable
 DATABASE_MAX_CONNECTIONS=25
 DATABASE_MAX_IDLE_CONNECTIONS=5
 DATABASE_CONNECTION_MAX_LIFETIME=1h
