fix: update golangci-lint config for v1.61.0 compatibility
- Replace deprecated 'skip-dirs' with 'exclude-dirs'
- Update govet config: 'check-shadowing' -> 'enable: [shadow]'

This resolves the config validation errors in CI.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,7 +4,7 @@ run:
   tests: true
   build-tags:
     - integration
-  skip-dirs:
+  exclude-dirs:
     - vendor
     - .git
     - .github
@@ -36,7 +36,8 @@ linters-settings:
     check-type-assertions: true
     check-blank: true
   govet:
-    check-shadowing: true
+    enable:
+      - shadow
   gofmt:
     simplify: true
   goimports:
