fix: add git configuration to template tests
- Add git user configuration in GitHub Actions workflow
- Add git config check and setup in test framework
- This fixes "Please tell me who you are" errors in tests

The tests require git configuration to perform commits during testing.

--- a/.github/workflows/template-tests.yml
+++ b/.github/workflows/template-tests.yml
@@ -36,6 +36,11 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: Configure git
+        run: |
+          git config --global user.email "test@example.com"
+          git config --global user.name "Test User"
+
       - name: Install dependencies
         run: |
           ${{ matrix.install_cmd }}
@@ -94,6 +99,11 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: Configure git
+        run: |
+          git config --global user.email "test@example.com"
+          git config --global user.name "Test User"
+
       - name: Install all dependencies
         run: |
           # Install yq
@@ -129,6 +139,11 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+
+      - name: Configure git
+        run: |
+          git config --global user.email "test@example.com"
+          git config --global user.name "Test User"
 
       - name: Test instantiation of ${{ matrix.project.name }}
         run: |
