--- a/.github/workflows/template-tests.yml
+++ b/.github/workflows/template-tests.yml
@@ -73,6 +73,7 @@ jobs:
   test-docker:
     name: Test Docker Build
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -84,9 +85,10 @@ jobs:
         run: |
           docker build -t test-template:latest .
 
-      - name: Test Docker image
+      - name: Test Docker image  
         run: |
-          docker run --rm test-template:latest /bin/sh -c "echo 'Docker image works'"
+          # Test that the container starts and shows version
+          docker run --rm test-template:latest -version
 
   test-all:
     name: Run All Tests
