fix: resolve test failures in new test suite
- Make fmt command work without gofumpt installed
- Update air module import path (cosmtrek/air -> air-verse/air)
- Install gofumpt in development workflow test
- Skip full install-tools in integration test to avoid conflicts

The tests were failing because:
1. gofumpt wasn't installed in CI environment
2. The air module changed its import path
3. golangci-lint was trying to download non-existent Go 1.24.3

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,6 +107,11 @@ jobs:
           git config --global user.email "test@example.com"
           git config --global user.name "Test User"
       
+      - name: Install basic tools
+        run: |
+          # Install gofumpt for formatting
+          go install mvdan.cc/gofumpt@latest
+          
       - name: Test Development Commands
         run: |
           # Test various make targets
@@ -282,7 +287,8 @@ jobs:
           git commit -m "Initial commit"
           
           # Run full development cycle
-          make install-tools || echo "Some tools might not install in CI"
+          # Skip install-tools as it may have version conflicts
+          go install mvdan.cc/gofumpt@latest || true
           make deps
           make fmt
           make lint
